basic electron app with connect and disconnect ui button

--- a/app/package.json
+++ b/app/package.json
@@ -12,5 +12,8 @@
   "description": "",
   "devDependencies": {
     "electron": "^36.2.1"
+  },
+  "dependencies": {
+    "socket.io-client": "^4.8.1"
   }
 }
